@@ -1,3 +1,9 @@
+2012-01-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+
+	* src/mcs/QueryID.cpp: Encode SHUTDOWN flag into query_id.
+	* include/mcs/QueryID.h: Likewise.
+	* testsuite/testID: Update testcase.
+
 2012-01-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
 	* testsuite/testMessageDispatcher.cpp: On making testcase for the dispatchers.
